Finally made React work. Time to write history

--- a/web-info/index.html
+++ b/web-info/index.html
@@ -12,4 +12,7 @@
 
 </body>
 <script src="../Resources/js/index.js"></script>
+<script stc="unpkg.com/react-dom/umd/react-dom.development.js"></script>
+<script stc="unpkg.com/react/umd/react.development.js"></script>
+
 </html>
