--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
 </head>
 
 <body>
+  <div id="searchbar"></div>
   <div id="app"></div>
-  <p id="sub"></p>
+  <p class="sub"></p>
 </body>
+
 
 </html>
